welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:21: error: not found: value sortieTrouvée
} while (!sortieTrouvée)
          ^